--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,10 +14,10 @@ kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20260103-prod-}
 
 # Processing Configuration (Production - Optimized)
 spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
-spring.kafka.streams.properties.commit.interval.ms=250
-# Set to 20 threads to match DOUBLED Orderbook topic partitions (20 partitions)
-# Partitions: forwardtesting-data=10, OpenInterest=6, Orderbook=20
-spring.kafka.streams.properties.num.stream.threads=20
+# OPTIMIZED: Increased from 250ms to 500ms to reduce disk I/O
+spring.kafka.streams.properties.commit.interval.ms=500
+# OPTIMIZED: Reduced from 20 to 16 to match CPU cores
+spring.kafka.streams.properties.num.stream.threads=16
 
 # Input topics (Production)
 unified.input.topic.ticks=forwardtesting-data
