--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,14 +47,18 @@ spring.kafka.streams.properties.processing.guarantee=at_least_once
 spring.kafka.streams.properties.replication.factor=1
 
 # Performance tuning
-spring.kafka.streams.properties.commit.interval.ms=100
+# OPTIMIZED: Increased from 100ms to 500ms to reduce disk I/O by ~80%
+spring.kafka.streams.properties.commit.interval.ms=500
 spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
-# Set to 20 threads to match DOUBLED Orderbook topic partitions (20 partitions)
-# Each thread can process one partition in parallel - full parallelism achieved
-# Partitions: forwardtesting-data=10, OpenInterest=6, Orderbook=20 (max)
-spring.kafka.streams.properties.num.stream.threads=20
-spring.kafka.streams.properties.session.timeout.ms=30000
-spring.kafka.streams.properties.heartbeat.interval.ms=3000
+# OPTIMIZED: Reduced from 20 to 16 to match CPU cores (was over-provisioned)
+# 16 threads = 16 CPU cores for optimal context switching
+spring.kafka.streams.properties.num.stream.threads=16
+# INCREASED: session.timeout from 30s to 60s for stability during bootstrap
+# Prevents unnecessary consumer group rebalances during long API calls
+spring.kafka.streams.properties.session.timeout.ms=60000
+spring.kafka.streams.properties.heartbeat.interval.ms=10000
+# ADDED: max.poll.interval increased to 5 minutes to handle bootstrap operations
+spring.kafka.streams.properties.max.poll.interval.ms=300000
 
 # Exception handlers - skip bad records instead of crashing
 spring.kafka.streams.properties.default.deserialization.exception.handler=org.apache.kafka.streams.errors.LogAndContinueExceptionHandler
@@ -82,10 +86,10 @@ unified.output.topic.instrument=instrument-candle-1m
 unified.window.grace.seconds=10
 
 # Consumer fetch optimization for high-throughput orderbook consumption
-# Optimized for Orderbook topic with 10 partitions
-# Higher values = faster consumption, more memory usage
-unified.processor.max.poll.records=2000
-unified.processor.fetch.min.bytes=2097152
+# OPTIMIZED: Reduced poll records from 2000 to 500 for smoother GC
+# OPTIMIZED: Reduced fetch.min.bytes from 2MB to 512KB for lower latency
+unified.processor.max.poll.records=500
+unified.processor.fetch.min.bytes=524288
 unified.processor.fetch.max.wait.ms=50
 
 # ============================================================================
@@ -104,8 +108,9 @@ family.cache.refresh.on.miss=true
 # ============================================================================
 # Aggregates 1m -> higher timeframes
 timeframe.aggregator.enabled=true
-# FIX: 10 second grace period to allow late-arriving data
-timeframe.aggregator.grace.seconds=10
+# INCREASED: 60 second grace period to handle late-arriving data during bootstrap
+# Allows time for historical data to be fetched and merged with live stream
+timeframe.aggregator.grace.seconds=60
 
 # Family candle output topics
 family.output.topics.1m=family-candle-1m
@@ -257,11 +262,26 @@ calculator.imbalance-bar.z-score-threshold=1.645
 # API: /getHisDataFromFivePaisa?exch=n&exch_type=c&scrip_code=XXX&start_date=YYYY-MM-DD&end_date=YYYY-MM-DD&interval=1m
 curated.levels.enabled=true
 curated.levels.api.base-url=http://localhost:8002
-curated.levels.api.timeout-ms=5000
+# INCREASED: From 5000ms to 15000ms for reliability during market hours
+curated.levels.api.timeout-ms=15000
 # Exchange: n=NSE, m=MCX (lowercase as per API)
 curated.levels.api.exch=n
 # Exchange Type: c=Cash, d=Derivatives (lowercase as per API)
 curated.levels.api.exch-type=c
+
+# ============================================================================
+# BOOTSTRAP EXECUTOR CONFIGURATION (Historical API Thread Pool)
+# ============================================================================
+# Dedicated 4-thread pool for fetching historical candle data from 5paisa API
+# Prevents blocking Kafka consumer threads during bootstrap operations
+bootstrap.executor.pool.size=4
+bootstrap.executor.queue.capacity=100
+bootstrap.executor.thread.prefix=bootstrap-hist-api-
+# Max retry attempts for failed bootstraps (retries on next candle arrival)
+bootstrap.max.retries=3
+# HTTP timeouts for historical API calls
+bootstrap.api.connect.timeout.ms=15000
+bootstrap.api.read.timeout.ms=30000
 
 # ============================================================================
 # GATE CHAIN CONFIGURATION
@@ -297,12 +317,12 @@ gate.stats.use.recent.window=true
 # ============================================================================
 spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=${REDIS_PORT:6379}
-spring.data.redis.password=${REDIS_PASSWORD:}
 spring.data.redis.database=${REDIS_DB:0}
 spring.data.redis.timeout=2000ms
-spring.data.redis.lettuce.pool.max-active=8
-spring.data.redis.lettuce.pool.max-idle=8
-spring.data.redis.lettuce.pool.min-idle=0
+# OPTIMIZED: Increased pool size to handle 16 Kafka threads + enrichment threads
+spring.data.redis.lettuce.pool.max-active=20
+spring.data.redis.lettuce.pool.max-idle=16
+spring.data.redis.lettuce.pool.min-idle=4
 redis.candle.history.ttl.hours=48
 
 # ============================================================================
