--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,8 +9,8 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams-dev/streamingcandle
 # Processing Configuration (Development - More verbose)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
 spring.kafka.streams.properties.commit.interval.ms=500
-# Set to 20 threads to match DOUBLED Orderbook topic partitions (20 partitions)
-spring.kafka.streams.properties.num.stream.threads=20
+# OPTIMIZED: Reduced from 20 to 16 to match CPU cores
+spring.kafka.streams.properties.num.stream.threads=16
 
 # Input topics (Development)
 unified.input.topic.ticks=forwardtesting-data-dev
