--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=${SERVER_PORT:8081}
 # ============================================================================
 # KAFKA STREAMS CONFIGURATION
 # ============================================================================
-spring.kafka.bootstrap-servers=3.111.242.49:9094
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.streams.application-id=${KAFKA_APP_ID:unified-family-processor-v2}
 spring.kafka.streams.client-id=streamingcandle-family
 # FIXED: Use persistent directory instead of /tmp (which OS can clear)
@@ -59,6 +59,10 @@ spring.kafka.streams.properties.max.poll.interval.ms=300000
 # Exception handlers - skip bad records instead of crashing
 spring.kafka.streams.properties.default.deserialization.exception.handler=org.apache.kafka.streams.errors.LogAndContinueExceptionHandler
 spring.kafka.streams.properties.default.production.exception.handler=org.apache.kafka.streams.errors.LogAndContinueProductionExceptionHandler
+
+# Topic configuration - 16 partitions to match CPU cores
+kafka.topic.partitions=16
+kafka.topic.replication-factor=1
 
 # ============================================================================
 # STAGE 1: INPUT TOPICS (Raw Data Sources)
@@ -337,6 +341,7 @@ logging.level.com.kotsin.consumer.signal=DEBUG
 logging.level.com.kotsin.consumer.capital=DEBUG
 logging.level.com.kotsin.consumer.curated=DEBUG
 logging.level.com.kotsin.consumer.score=DEBUG
+logging.level.com.kotsin.consumer.aggregator=DEBUG
 logging.level.org.apache.kafka=WARN
 
 # ============================================================================
@@ -399,6 +404,7 @@ paper.trade.executor.enable.partial.exits=false
 # Independent Kafka consumer for tick data (forwardtesting-data topic)
 v2.tick.aggregator.enabled=true
 v2.tick.input.topic=forwardtesting-data
+v2.tick.output.topic=tick-candles-1m
 v2.tick.consumer.group=logging-test-tick-agg-20260131
 v2.tick.aggregator.threads=4
 
@@ -408,6 +414,7 @@ v2.tick.aggregator.threads=4
 # Independent Kafka consumer for orderbook data
 v2.orderbook.aggregator.enabled=true
 v2.orderbook.input.topic=Orderbook
+v2.orderbook.output.topic=orderbook-metrics-1m
 v2.orderbook.consumer.group=logging-test-ob-agg-20260131
 v2.orderbook.aggregator.threads=2
 
@@ -417,6 +424,7 @@ v2.orderbook.aggregator.threads=2
 # Independent Kafka consumer for Open Interest data
 v2.oi.aggregator.enabled=true
 v2.oi.input.topic=OpenInterest
+v2.oi.output.topic=oi-metrics-1m
 v2.oi.consumer.group=logging-test-oi-agg-20260131
 v2.oi.aggregator.threads=2
 
@@ -480,7 +488,10 @@ signal.fudkii.weight.intensity=0.15
 # Signal Engine Integration Settings
 signal.engine.gate.enabled=true
 signal.engine.papertrade.enabled=false
-signal.engine.symbols=NIFTY,BANKNIFTY
+# Dynamic symbol discovery - process ALL symbols from Redis
+signal.engine.dynamic.symbols=true
+# Fallback symbols if dynamic discovery is disabled (comma-separated)
+signal.engine.symbols=
 signal.engine.timeframe=5m
 
 # ============================================================================
