--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -367,6 +367,16 @@ logging.level.com.kotsin.consumer.trading.strategy.FudkiiStrategy=DEBUG
 logging.level.com.kotsin.consumer.trading.strategy.PivotRetestStrategy=DEBUG
 logging.level.com.kotsin.consumer.enrichment.enricher.TechnicalIndicatorEnricher=DEBUG
 
+# ============================================================================
+# DEEP DEBUG: PIVOT & HISTORICAL DATA INTEGRATION
+# ============================================================================
+# Set to DEBUG for pivot-related logging, TRACE for maximum detail
+# PIVOT_LEVEL, PIVOT_CONFLUENCE, HIST_BOOTSTRAP, FAST_ANALYTICS
+logging.level.com.kotsin.consumer.service.PivotLevelService=DEBUG
+logging.level.com.kotsin.consumer.service.HistoricalDataBootstrapService=INFO
+logging.level.com.kotsin.consumer.client.FastAnalyticsClient=DEBUG
+logging.level.com.kotsin.consumer.signal.analyzer.PivotConfluenceAnalyzer=DEBUG
+
 # Pattern with timestamp
 logging.pattern.console=%d{HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
 
@@ -652,3 +662,68 @@ gate.risk.reward.min=1.5
 gate.momentum.rsi.overbought=75
 gate.momentum.rsi.oversold=25
 gate.fudkii.min.score=40
+
+# ============================================================================
+# FASTANALYTICS API CONFIGURATION (Python API on port 8002)
+# ============================================================================
+# Base URL for FastAnalytics Python API running on port 8002
+# This API provides access to FivePaisa historical data and pivot calculations
+fastanalytics.base-url=http://localhost:8002
+# Connection timeout for API calls (ms)
+fastanalytics.connect-timeout-ms=5000
+# Read timeout for API calls (ms) - increased for large historical data fetches
+fastanalytics.read-timeout-ms=60000
+
+# ============================================================================
+# HISTORICAL DATA BOOTSTRAP CONFIGURATION
+# ============================================================================
+# Enable/disable historical data bootstrap on startup
+# When enabled, fetches 40 days of 1m candles for each symbol
+bootstrap.historical.enabled=true
+# Number of days of historical 1-minute candle data to fetch
+bootstrap.historical.days=40
+# Number of parallel threads for bootstrapping
+bootstrap.historical.threads=4
+# Delay before starting bootstrap after startup (seconds)
+bootstrap.historical.delay-seconds=10
+
+# ============================================================================
+# PIVOT LEVEL SERVICE CONFIGURATION
+# ============================================================================
+# Cache TTL for pivot levels (minutes)
+pivot.cache.ttl-minutes=60
+# Scheduled refresh cron (9 AM on trading days)
+pivot.refresh.cron=0 0 9 * * MON-FRI
+
+# ============================================================================
+# PIVOT CONFLUENCE ANALYSIS CONFIGURATION
+# ============================================================================
+# Threshold for confluence detection (percentage) - pivots within this range are considered confluent
+pivot.confluence.threshold-percent=0.5
+# CPR width thresholds (percentage of price)
+pivot.cpr.thin-threshold=0.5
+pivot.cpr.ultra-thin-threshold=0.3
+
+# ============================================================================
+# BOUNCE DETECTION CONFIGURATION
+# ============================================================================
+# Price must be within this percentage of a pivot level to detect a bounce
+bounce.detection.proximity-threshold=0.3
+# Minimum volume ratio (vs average) to confirm a bounce
+bounce.detection.volume-confirm-ratio=1.2
+# Minimum candles to look back for bounce confirmation
+bounce.detection.lookback-candles=3
+
+# ============================================================================
+# PIVOT BOOST CONFIGURATION (Score additions to FUDKII)
+# ============================================================================
+# Boost for thin CPR detection (high breakout probability)
+pivot.boost.thin-cpr=5.0
+# Boost for ultra-thin CPR (very high breakout probability)
+pivot.boost.ultra-thin-cpr=10.0
+# Boost for strong confluence (3+ timeframe pivots aligned)
+pivot.boost.strong-confluence=8.0
+# Boost for bounce detection at pivot
+pivot.boost.bounce-at-pivot=7.0
+# Boost for high-confidence bounce (bounce + confluence + thin CPR)
+pivot.boost.high-confidence-bounce=12.0
