--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams-replay/${spring.application.na
 # APP-ID PREFIX - Change this to replay data from earliest with new consumer groups
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
 # Updated: 2026-01-31 - LOGGING TEST MODE
-kafka.streams.app-id-prefix=logging-test-20260131-
+kafka.streams.app-id-prefix=replay-20260201-1228-
 
 # KAFKA CONSUMER GROUP IDS - Fresh groups for logging test
 # Updated: 2026-01-31 - LOGGING TEST MODE
@@ -377,6 +377,15 @@ logging.level.com.kotsin.consumer.service.HistoricalDataBootstrapService=INFO
 logging.level.com.kotsin.consumer.client.FastAnalyticsClient=DEBUG
 logging.level.com.kotsin.consumer.signal.analyzer.PivotConfluenceAnalyzer=DEBUG
 
+# ============================================================================
+# DEEP DEBUG: STRATEGY TRIGGERS (FUDKII + PIVOT CONFLUENCE)
+# ============================================================================
+# FUDKII_TRIGGER, PIVOT_TRIGGER - detailed logging for both strategies
+logging.level.com.kotsin.consumer.signal.trigger=DEBUG
+logging.level.com.kotsin.consumer.signal.trigger.FudkiiSignalTrigger=DEBUG
+logging.level.com.kotsin.consumer.signal.trigger.PivotConfluenceTrigger=DEBUG
+logging.level.com.kotsin.consumer.signal.engine.SignalEngine=DEBUG
+
 # Pattern with timestamp
 logging.pattern.console=%d{HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
 
@@ -415,7 +424,7 @@ paper.trade.executor.enable.partial.exits=false
 v2.tick.aggregator.enabled=true
 v2.tick.input.topic=forwardtesting-data
 v2.tick.output.topic=tick-candles-1m
-v2.tick.consumer.group=logging-test-tick-agg-20260131
+v2.tick.consumer.group=replay-20260201-1228-tick-agg
 v2.tick.aggregator.threads=4
 
 # ============================================================================
@@ -425,7 +434,7 @@ v2.tick.aggregator.threads=4
 v2.orderbook.aggregator.enabled=true
 v2.orderbook.input.topic=Orderbook
 v2.orderbook.output.topic=orderbook-metrics-1m
-v2.orderbook.consumer.group=logging-test-ob-agg-20260131
+v2.orderbook.consumer.group=replay-20260201-1228-ob-agg
 v2.orderbook.aggregator.threads=2
 
 # ============================================================================
@@ -435,7 +444,7 @@ v2.orderbook.aggregator.threads=2
 v2.oi.aggregator.enabled=true
 v2.oi.input.topic=OpenInterest
 v2.oi.output.topic=oi-metrics-1m
-v2.oi.consumer.group=logging-test-oi-agg-20260131
+v2.oi.consumer.group=replay-20260201-1228-oi-agg
 v2.oi.aggregator.threads=2
 
 # ============================================================================
@@ -473,13 +482,13 @@ signal.engine.schedule.interval.ms=5000
 # Primary timeframe for signal detection
 signal.engine.primary.timeframe=5m
 
-# Signal Thresholds
+# Signal Thresholds - LOWERED for realistic trading
 # WATCH threshold - minimum FUDKII score to enter WATCH state
-signal.watch.threshold=40
+signal.watch.threshold=20
 # ACTIVE threshold - minimum FUDKII score to enter ACTIVE state
-signal.active.threshold=60
+signal.active.threshold=35
 # Minimum confidence required for signal
-signal.confidence.min=0.5
+signal.confidence.min=0.25
 
 # Signal Expiry Settings
 # How long a WATCH signal stays valid before expiring (minutes)
@@ -497,7 +506,7 @@ signal.fudkii.weight.intensity=0.15
 
 # Signal Engine Integration Settings
 signal.engine.gate.enabled=true
-signal.engine.papertrade.enabled=false
+signal.engine.papertrade.enabled=true
 # Dynamic symbol discovery - process ALL symbols from Redis
 signal.engine.dynamic.symbols=true
 # Fallback symbols if dynamic discovery is disabled (comma-separated)
@@ -656,12 +665,12 @@ gate.vwap.required=false
 gate.time.of.day.required=false
 gate.fudkii.required=false
 
-# Gate Thresholds
-gate.volume.min.ratio=1.2
-gate.risk.reward.min=1.5
+# Gate Thresholds - LOWERED for realistic trading
+gate.volume.min.ratio=1.0
+gate.risk.reward.min=1.2
 gate.momentum.rsi.overbought=75
 gate.momentum.rsi.oversold=25
-gate.fudkii.min.score=40
+gate.fudkii.min.score=20
 
 # ============================================================================
 # FASTANALYTICS API CONFIGURATION (Python API on port 8002)
@@ -686,6 +695,8 @@ bootstrap.historical.days=40
 bootstrap.historical.threads=4
 # Delay before starting bootstrap after startup (seconds)
 bootstrap.historical.delay-seconds=10
+# Enable automatic startup bootstrap from scripFinder API
+bootstrap.historical.startup.enabled=true
 
 # ============================================================================
 # PIVOT LEVEL SERVICE CONFIGURATION
@@ -727,3 +738,100 @@ pivot.boost.strong-confluence=8.0
 pivot.boost.bounce-at-pivot=7.0
 # Boost for high-confidence bounce (bounce + confluence + thin CPR)
 pivot.boost.high-confidence-bounce=12.0
+
+# ============================================================================
+# PATTERN ANALYZER CONFIGURATION
+# ============================================================================
+# Enable/disable pattern detection
+pattern.detection.enabled=true
+# Minimum confidence threshold for patterns (0-1)
+pattern.min.confidence=0.6
+# Body ratio threshold for pattern detection
+pattern.body.ratio.threshold=0.3
+# Doji body ratio (smaller = stricter doji detection)
+pattern.doji.body.ratio=0.1
+
+# ============================================================================
+# PATTERN SIGNAL PRODUCER CONFIGURATION
+# ============================================================================
+# Enable/disable pattern signal publishing
+pattern.signal.enabled=true
+# Kafka topic for pattern signals
+pattern.signal.kafka.topic=pattern-signals
+# Redis key prefix for pattern data
+pattern.signal.redis.prefix=pattern:
+# TTL for pattern data in Redis (minutes)
+pattern.signal.redis.ttl.minutes=30
+# Minimum confidence for publishing (0-1)
+pattern.signal.min.confidence=0.6
+
+# ============================================================================
+# QUANT SCORE PRODUCER CONFIGURATION
+# ============================================================================
+# Enable/disable quant score publishing
+quant.score.enabled=true
+# Kafka topic for quant scores
+quant.score.kafka.topic=quant-scores
+# Redis key prefix for quant scores
+quant.score.redis.prefix=quant:score:
+# TTL for quant score data in Redis (minutes)
+quant.score.redis.ttl.minutes=10
+
+# ============================================================================
+# QUANT SCORE GATE CONFIGURATION
+# ============================================================================
+# Weight of quant score gate in chain (0-1)
+gate.quant.weight=0.20
+# Minimum FUDKII score required - LOWERED
+gate.quant.min.score=20
+# Minimum confidence required (0-1) - LOWERED
+gate.quant.min.confidence=0.25
+# Minimum aligned components (0-6) - LOWERED
+gate.quant.min.alignment=2
+# Is this gate required for signal approval - RELAXED
+gate.quant.required=false
+
+# ============================================================================
+# PATTERN GATE CONFIGURATION
+# ============================================================================
+# Weight of pattern gate in chain (0-1)
+gate.pattern.weight=0.15
+# Minimum pattern confidence (0-1)
+gate.pattern.min.confidence=0.6
+# Is this gate required for signal approval
+gate.pattern.required=false
+
+# ============================================================================
+# STRATEGY 1: FUDKII SIGNAL TRIGGER (SuperTrend + Bollinger Band)
+# ============================================================================
+# Trigger on 30m candle when SuperTrend flips AND close outside BB
+# BULLISH: ST flips red→green AND close > BB_upper
+# BEARISH: ST flips green→red AND close < BB_lower
+fudkii.trigger.enabled=true
+# Timeframe for FUDKII trigger (30m candles aggregated from 1m)
+fudkii.trigger.timeframe=30m
+# Bollinger Band period (20 candles)
+fudkii.trigger.bb.period=20
+# SuperTrend period (14 candles with ATR multiplier 3.0)
+fudkii.trigger.st.period=14
+
+# ============================================================================
+# STRATEGY 2: PIVOT CONFLUENCE TRIGGER (HTF/LTF Price Action)
+# ============================================================================
+# Pure price action: HTF sets direction bias, LTF confirms entry
+# Only trade in direction of HTF bias (no counter-trend trades)
+pivot.confluence.trigger.enabled=true
+# Minimum confluence levels for trigger (Daily + Weekly + Monthly pivots)
+pivot.confluence.trigger.min.levels=2
+# Minimum Risk:Reward ratio required
+pivot.confluence.trigger.min.rr=1.5
+# HTF weight for bias determination (Daily=0.4, 4H=0.3)
+pivot.confluence.trigger.htf.weight=0.7
+# LTF weight for confirmation (15m=0.2, 5m=0.1)
+pivot.confluence.trigger.ltf.weight=0.3
+# SMC Order Block confirmation required
+pivot.confluence.trigger.smc.orderblock.required=false
+# SMC FVG (Fair Value Gap) confirmation
+pivot.confluence.trigger.smc.fvg.required=false
+# Volume confirmation ratio (vs average)
+pivot.confluence.trigger.volume.ratio=1.2
