--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ server.port=${SERVER_PORT:8081}
 # ============================================================================
 # KAFKA STREAMS CONFIGURATION
 # ============================================================================
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.streams.application-id=${KAFKA_APP_ID:unified-family-processor-v2}
+spring.kafka.bootstrap-servers=3.111.242.49:9094
+spring.kafka.streams.application-id=${KAFKA_APP_ID:unified-family-processor-v3}
 spring.kafka.streams.client-id=streamingcandle-family
 # FIXED: Use persistent directory instead of /tmp (which OS can clear)
 # Updated: 2026-01-16 - REPLAY MODE: Using /tmp for isolated replay state
@@ -76,9 +76,6 @@ input.topic.oi=OpenInterest
 # ============================================================================
 # Joins tick + orderbook + OI into InstrumentCandle
 unified.processor.enabled=true
-unified.input.topic.ticks=forwardtesting-data
-unified.input.topic.orderbook=Orderbook
-unified.input.topic.oi=OpenInterest
 unified.output.topic.instrument=instrument-candle-1m
 # FIX: Increased to 10s to allow options/futures from different partitions to arrive
 # Options were arriving AFTER window emission with 2s grace (timing issue)
@@ -111,18 +108,6 @@ timeframe.aggregator.enabled=true
 # INCREASED: 60 second grace period to handle late-arriving data during bootstrap
 # Allows time for historical data to be fetched and merged with live stream
 timeframe.aggregator.grace.seconds=60
-
-# Family candle output topics
-family.output.topics.1m=family-candle-1m
-family.output.topics.2m=family-candle-2m
-family.output.topics.3m=family-candle-3m
-family.output.topics.5m=family-candle-5m
-family.output.topics.15m=family-candle-15m
-family.output.topics.30m=family-candle-30m
-family.output.topics.1h=family-candle-1h
-family.output.topics.2h=family-candle-2h
-family.output.topics.4h=family-candle-4h
-family.output.topics.1d=family-candle-1d
 
 # ============================================================================
 # LEGACY STRATEGY MODULES (DISABLED - Replaced by V2 Architecture)
@@ -198,7 +183,7 @@ curated.signals.output.topic=curated-trading-signals
 # ============================================================================
 # SCRIPFINDER API CONFIGURATION
 # ============================================================================
-scripfinder.api.base-url=${SCRIPFINDER_API_URL:http://localhost:8102}
+scripfinder.api.base-url=${SCRIPFINDER_API_URL:http://3.111.242.49:8102}
 scripfinder.api.timeout.ms=${SCRIPFINDER_TIMEOUT_MS:3000}
 scripfinder.api.circuit-breaker.failure-threshold=5
 scripfinder.api.circuit-breaker.timeout-ms=60000
@@ -257,7 +242,7 @@ calculator.imbalance-bar.z-score-threshold=1.645
 # Uses same 5paisa historical data API as TradeExecutionModule
 # API: /getHisDataFromFivePaisa?exch=n&exch_type=c&scrip_code=XXX&start_date=YYYY-MM-DD&end_date=YYYY-MM-DD&interval=1m
 curated.levels.enabled=true
-curated.levels.api.base-url=http://localhost:8002
+curated.levels.api.base-url=http://3.111.242.49:8002
 # INCREASED: From 5000ms to 15000ms for reliability during market hours
 curated.levels.api.timeout-ms=15000
 # Exchange: n=NSE, m=MCX (lowercase as per API)
@@ -381,6 +366,22 @@ logging.level.com.kotsin.consumer.signal.analyzer.PivotConfluenceAnalyzer=DEBUG
 logging.pattern.console=%d{HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
 
 # ============================================================================
+# TRACE LOGGING (Symbol-Specific End-to-End Debugging)
+# ============================================================================
+# Configure specific scripcode/symbols for detailed logging through the pipeline
+# Leave EMPTY for sampled logging (1% of all data)
+# Add specific values for FULL logging: 999920000,NIFTY,BANKNIFTY,SBIN
+# Example: logging.trace.symbols=999920000,NIFTY,BANKNIFTY
+# 
+# Components using this config:
+# - TickAggregator [TICK-TRACE]
+# - OIAggregator [OI-TRACE]
+# - OrderbookAggregator [OB-TRACE]
+# - RedisCacheService [REDIS-WRITE], [REDIS-READ]
+# - SignalEngine [SIGNAL-ENGINE]
+logging.trace.symbols=
+
+# ============================================================================
 # PAPER TRADE EXECUTOR (E2E Testing with Backplay)
 # ============================================================================
 # Enabled for replay testing - tracks signals against price data
@@ -415,7 +416,7 @@ paper.trade.executor.enable.partial.exits=false
 v2.tick.aggregator.enabled=true
 v2.tick.input.topic=forwardtesting-data
 v2.tick.output.topic=tick-candles-1m
-v2.tick.consumer.group=logging-test-tick-agg-20260131
+v2.tick.consumer.group=logging-test-tick-agg-20260132
 v2.tick.aggregator.threads=4
 
 # ============================================================================
@@ -425,7 +426,7 @@ v2.tick.aggregator.threads=4
 v2.orderbook.aggregator.enabled=true
 v2.orderbook.input.topic=Orderbook
 v2.orderbook.output.topic=orderbook-metrics-1m
-v2.orderbook.consumer.group=logging-test-ob-agg-20260131
+v2.orderbook.consumer.group=logging-test-ob-agg-20260132
 v2.orderbook.aggregator.threads=2
 
 # ============================================================================
@@ -435,7 +436,7 @@ v2.orderbook.aggregator.threads=2
 v2.oi.aggregator.enabled=true
 v2.oi.input.topic=OpenInterest
 v2.oi.output.topic=oi-metrics-1m
-v2.oi.consumer.group=logging-test-oi-agg-20260131
+v2.oi.consumer.group=logging-test-oi-agg-20260132
 v2.oi.aggregator.threads=2
 
 # ============================================================================
@@ -668,7 +669,7 @@ gate.fudkii.min.score=40
 # ============================================================================
 # Base URL for FastAnalytics Python API running on port 8002
 # This API provides access to FivePaisa historical data and pivot calculations
-fastanalytics.base-url=http://localhost:8002
+fastanalytics.base-url=http://3.111.242.49:8002
 # Connection timeout for API calls (ms)
 fastanalytics.connect-timeout-ms=5000
 # Read timeout for API calls (ms) - increased for large historical data fetches
@@ -727,3 +728,4 @@ pivot.boost.strong-confluence=8.0
 pivot.boost.bounce-at-pivot=7.0
 # Boost for high-confidence bounce (bounce + confluence + thin CPR)
 pivot.boost.high-confidence-bounce=12.0
+scripfinder.base-url=http://3.111.242.49:8081
