--- a/src/main/resources/application-replay.properties
+++ b/src/main/resources/application-replay.properties
@@ -18,13 +18,13 @@
 # Format: replay-YYYYMMDD-HHMM-v1
 
 # Master prefix for all replay consumer groups
-kafka.streams.app-id-prefix=replay-20260117-bugfix-
+kafka.streams.app-id-prefix=replay-20260201-1801-v1-
 
 # Individual consumer groups for replay
-kafka.consumer.curated-group=replay-curated-consumer-20260117-bugfix
-kafka.consumer.mtis-group=replay-mtis-consumer-20260117-bugfix
-kafka.consumer.stats-group=replay-stats-consumer-20260117-bugfix
-masterarch.consumer.group-id=replay-masterarch-consumer-20260117-bugfix
+kafka.consumer.curated-group=replay-curated-consumer-20260201-1801-v1
+kafka.consumer.mtis-group=replay-mtis-consumer-20260201-1801-v1
+kafka.consumer.stats-group=replay-stats-consumer-20260201-1801-v1
+masterarch.consumer.group-id=replay-masterarch-consumer-20260201-1801-v1
 
 # ============================================================================
 # OFFSET RESET - EARLIEST for replay
@@ -44,12 +44,18 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams-replay/${spring.application.na
 paper.trade.executor.enabled=true
 paper.trade.executor.signal.topic=trading-signals-v2
 paper.trade.executor.price.topic=family-candle-1m
-paper.trade.executor.group.id=replay-paper-trade-executor-20260117-bugfix
-paper.trade.executor.price.group.id=replay-paper-trade-price-tracker-20260117-bugfix
+paper.trade.executor.group.id=replay-paper-trade-executor-20260201-1801-v1
+paper.trade.executor.price.group.id=replay-paper-trade-price-tracker-20260201-1801-v1
 paper.trade.executor.slippage.bps=5
 paper.trade.executor.max.active.positions=100
 paper.trade.executor.position.timeout.minutes=240
 paper.trade.executor.enable.partial.exits=false
+
+# ============================================================================
+# EVENT-TIME WINDOWING - ENABLED for replay
+# ============================================================================
+# Uses tick event times for window boundaries instead of wall clock
+v2.tick.aggregator.event-time-mode=true
 
 # ============================================================================
 # PROCESSING CONFIGURATION
@@ -76,6 +82,26 @@ timeframe.aggregator.grace.seconds=5
 logging.level.com.kotsin.consumer.enrichment.signal.execution=INFO
 logging.level.com.kotsin.consumer.enrichment.signal.outcome=INFO
 logging.level.com.kotsin.consumer.enrichment.signal=DEBUG
+
+# ============================================================================
+# FUDKII TRIGGER FIXES - Enhanced signal detection
+# ============================================================================
+# FIX #1: BBST state is now persisted to Redis (automatic)
+
+# FIX #2: Require both conditions (ST flip AND BB outside) - core strategy
+# Set to false to allow OR condition (less strict)
+fudkii.trigger.require.both.conditions=true
+
+# FIX #3: Imbalance triggers (VIB/DIB/TRB) are now optional for ACTIVE
+# Set to true to require imbalance for ACTIVE trigger (original strict behavior)
+signal.active.require.imbalance=false
+signal.active.imbalance.boost=15
+
+# FIX #4: ST flip debounce - remember flip for this many minutes
+fudkii.trigger.flip.debounce.minutes=10
+
+# FIX #5: Log near-miss scenarios for debugging
+fudkii.trigger.log.near.misses=true
 
 # ============================================================================
 # MONGODB - Use separate collection prefix for replay (optional)
