--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,13 +20,13 @@ spring.kafka.streams.state-dir=/tmp/kafka-streams-replay/${spring.application.na
 # APP-ID PREFIX - Change this to replay data from earliest with new consumer groups
 # Example: "replay-20251229-" creates groups like "replay-20251229-unified-instrument-candle-processor"
 # Updated: 2026-01-31 - LOGGING TEST MODE
-kafka.streams.app-id-prefix=replay-20260201-1228-
+kafka.streams.app-id-prefix=replay-20260201-1626-fresh-
 
-# KAFKA CONSUMER GROUP IDS - Fresh groups for logging test
-# Updated: 2026-01-31 - LOGGING TEST MODE
-kafka.consumer.curated-group=logging-test-curated-20260131
-kafka.consumer.mtis-group=logging-test-mtis-20260131
-kafka.consumer.stats-group=logging-test-stats-20260131
+# KAFKA CONSUMER GROUP IDS - Fresh groups for replay
+# Updated: 2026-02-01 - REPLAY MODE
+kafka.consumer.curated-group=replay-curated-consumer-20260201-1626-fresh
+kafka.consumer.mtis-group=replay-mtis-consumer-20260201-1626-fresh
+kafka.consumer.stats-group=replay-stats-consumer-20260201-1626-fresh
 kafka.consumer.quant-group=logging-test-quant-20260131
 kafka.consumer.fudkii-group=logging-test-fudkii-20260131
 
@@ -424,7 +424,7 @@ paper.trade.executor.enable.partial.exits=false
 v2.tick.aggregator.enabled=true
 v2.tick.input.topic=forwardtesting-data
 v2.tick.output.topic=tick-candles-1m
-v2.tick.consumer.group=replay-20260201-1228-tick-agg
+v2.tick.consumer.group=replay-20260201-1820-v1-tick-agg
 v2.tick.aggregator.threads=4
 
 # ============================================================================
@@ -434,7 +434,7 @@ v2.tick.aggregator.threads=4
 v2.orderbook.aggregator.enabled=true
 v2.orderbook.input.topic=Orderbook
 v2.orderbook.output.topic=orderbook-metrics-1m
-v2.orderbook.consumer.group=replay-20260201-1228-ob-agg
+v2.orderbook.consumer.group=replay-20260201-1801-v1-ob-agg
 v2.orderbook.aggregator.threads=2
 
 # ============================================================================
@@ -444,7 +444,7 @@ v2.orderbook.aggregator.threads=2
 v2.oi.aggregator.enabled=true
 v2.oi.input.topic=OpenInterest
 v2.oi.output.topic=oi-metrics-1m
-v2.oi.consumer.group=replay-20260201-1228-oi-agg
+v2.oi.consumer.group=replay-20260201-1801-v1-oi-agg
 v2.oi.aggregator.threads=2
 
 # ============================================================================
@@ -489,6 +489,12 @@ signal.watch.threshold=20
 signal.active.threshold=35
 # Minimum confidence required for signal
 signal.confidence.min=0.25
+
+# FIX #3: Imbalance triggers (VIB/DIB/TRB) are now optional for ACTIVE
+# Set to true to require imbalance for ACTIVE trigger (original strict behavior)
+signal.active.require.imbalance=false
+# Score boost when imbalance is present (added to composite score)
+signal.active.imbalance.boost=15
 
 # Signal Expiry Settings
 # How long a WATCH signal stays valid before expiring (minutes)
@@ -814,6 +820,20 @@ fudkii.trigger.timeframe=30m
 fudkii.trigger.bb.period=20
 # SuperTrend period (14 candles with ATR multiplier 3.0)
 fudkii.trigger.st.period=14
+
+# --- FUDKII TRIGGER FIXES (2026-02-01) ---
+# FIX #1: BBST state is now automatically persisted to Redis for restart recovery
+
+# FIX #2: Require both conditions (ST flip AND BB outside) - core strategy
+# Set to false to allow OR condition (less strict)
+fudkii.trigger.require.both.conditions=true
+
+# FIX #4: ST flip debounce - remember flip for this many minutes
+# Prevents missing signals when flip detection spans multiple processing cycles
+fudkii.trigger.flip.debounce.minutes=10
+
+# FIX #5: Log near-miss scenarios for debugging missed signals
+fudkii.trigger.log.near.misses=true
 
 # ============================================================================
 # STRATEGY 2: PIVOT CONFLUENCE TRIGGER (HTF/LTF Price Action)
