--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -342,6 +342,7 @@ logging.level.com.kotsin.consumer.capital=DEBUG
 logging.level.com.kotsin.consumer.curated=DEBUG
 logging.level.com.kotsin.consumer.score=DEBUG
 logging.level.com.kotsin.consumer.aggregator=DEBUG
+logging.level.com.kotsin.consumer.event=TRACE
 logging.level.org.apache.kafka=WARN
 
 # ============================================================================
@@ -757,6 +758,13 @@ pattern.body.ratio.threshold=0.3
 # Doji body ratio (smaller = stricter doji detection)
 pattern.doji.body.ratio=0.1
 
+# Multi-Timeframe Pattern Detection
+# Enable MTF pattern detection (detects patterns on multiple timeframes)
+pattern.detection.mtf.enabled=true
+# Timeframes for pattern detection (comma-separated)
+# Supported: 1m, 3m, 5m, 15m, 30m, 1h, 2h, 4h, 1d
+pattern.detection.timeframes=5m,15m,30m,1h,2h,4h,1d
+
 # ============================================================================
 # PATTERN SIGNAL PRODUCER CONFIGURATION
 # ============================================================================
@@ -818,8 +826,8 @@ fudkii.trigger.enabled=true
 fudkii.trigger.timeframe=30m
 # Bollinger Band period (20 candles)
 fudkii.trigger.bb.period=20
-# SuperTrend period (14 candles with ATR multiplier 3.0)
-fudkii.trigger.st.period=14
+# SuperTrend period (7 candles with ATR multiplier 3.0)
+fudkii.trigger.st.period=7
 
 # --- FUDKII TRIGGER FIXES (2026-02-01) ---
 # FIX #1: BBST state is now automatically persisted to Redis for restart recovery
@@ -834,6 +842,14 @@ fudkii.trigger.flip.debounce.minutes=10
 
 # FIX #5: Log near-miss scenarios for debugging missed signals
 fudkii.trigger.log.near.misses=true
+
+# FIX #6: Historical data bootstrap - number of days to fetch from API
+# This ensures we have enough data even if MongoDB is missing historical candles
+fudkii.trigger.bootstrap.days-back=5
+
+# FIX #7: MCX Support - Enable/disable MCX (exchange=M) FUDKII signals
+# MCX uses different 30m boundaries: 9:00-9:30, 9:30-10:00, etc. up to 23:30
+fudkii.trigger.mcx.enabled=true
 
 # ============================================================================
 # STRATEGY 2: PIVOT CONFLUENCE TRIGGER (HTF/LTF Price Action)
