--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -851,6 +851,25 @@ fudkii.trigger.bootstrap.days-back=5
 # MCX uses different 30m boundaries: 9:00-9:30, 9:30-10:00, etc. up to 23:30
 fudkii.trigger.mcx.enabled=true
 
+# Kafka topic for FUDKII signals
+fudkii.trigger.kafka.topic=kotsin_FUDKII
+
+# ============================================================================
+# FUKAA VOLUME FILTER (Filters FUDKII signals by volume surge)
+# ============================================================================
+# FUKAA = FUDKII + Volume Surge Filter
+# At signal time T, checks if T-1 or T candle volume > 2x avg of last 6 candles
+# If neither passes, signal enters watching mode for T+1 re-evaluation
+fukaa.trigger.enabled=true
+# Kafka topic for FUKAA signals (volume-confirmed FUDKII)
+fukaa.trigger.kafka.topic=kotsin_FUKAA
+# Volume multiplier threshold (2.0 = 2x average volume required)
+fukaa.trigger.volume.multiplier=2.0
+# Number of candles for average volume calculation (candles -3 to -8 from current)
+fukaa.trigger.avg.candles=6
+# Redis TTL for watching signals (minutes) - slightly more than 30m to cover T+1
+fukaa.trigger.watching.ttl.minutes=35
+
 # ============================================================================
 # STRATEGY 2: PIVOT CONFLUENCE TRIGGER (HTF/LTF Price Action)
 # ============================================================================
