--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -629,14 +629,17 @@ breakout.max.active=20
 # V2 PAPER TRADE CONFIGURATION
 # ============================================================================
 # Initial Capital
-papertrade.initial.capital=100000
+papertrade.initial.capital=1000000
 
 # Risk Management
-papertrade.max.positions=5
+papertrade.max.positions=100
 papertrade.risk.per.trade=0.02
 
 # Commission
 papertrade.commission.per.trade=20
+
+# ML Mode: skip capital/position limits to collect all signal outcomes for training
+papertrade.ml.mode=true
 
 # ============================================================================
 # V2 SIGNAL STATS CONFIGURATION
@@ -855,6 +858,20 @@ fudkii.trigger.mcx.enabled=true
 fudkii.trigger.kafka.topic=kotsin_FUDKII
 
 # ============================================================================
+# STRATEGY STATE ORCHESTRATOR (Bridge: Signals -> State Machine -> Dashboard)
+# ============================================================================
+# Consumer group for orchestrator (separate from signal generators)
+orchestrator.consumer.group=strategy-orchestrator-v1
+# Signal TTL - active triggers expire after this (minutes)
+orchestrator.signal.ttl.minutes=30
+# Cooldown after signal expires without being positioned (minutes)
+orchestrator.cooldown.minutes=15
+# Max signals per instrument per day
+orchestrator.max.signals.per.day=5
+# Minimum gate chain score to promote WATCHING -> ACTIVE
+orchestrator.gate.min.score=50
+
+# ============================================================================
 # FUKAA VOLUME FILTER (Filters FUDKII signals by volume surge)
 # ============================================================================
 # FUKAA = FUDKII + Volume Surge Filter
@@ -890,3 +907,43 @@ pivot.confluence.trigger.smc.orderblock.required=false
 pivot.confluence.trigger.smc.fvg.required=false
 # Volume confirmation ratio (vs average)
 pivot.confluence.trigger.volume.ratio=1.2
+
+# ============================================================================
+# STRATEGY 4: MICRO-ALPHA (Microstructure Alpha Engine)
+# ============================================================================
+# Edge: Exploit information asymmetry when institutional footprint
+# (orderbook, OI, options) diverges from price action.
+# Regime-adaptive: gamma regime + market regime determine entry mode.
+microalpha.enabled=true
+# Kafka topic for MicroAlpha signals
+microalpha.kafka.topic=microalpha-signals
+# Minimum absolute conviction to trigger (0-100)
+microalpha.trigger.min.conviction=45
+# High conviction threshold (skip momentum check) (0-100)
+microalpha.trigger.high.conviction=65
+# Cooldown between triggers for same symbol (minutes)
+microalpha.trigger.cooldown.minutes=10
+# Maximum signals per symbol per day
+microalpha.trigger.max.signals.per.day=8
+# Require orderbook data for signal generation
+microalpha.trigger.require.orderbook=true
+# ATR multiplier for stop loss calculation
+microalpha.trigger.atr.stop.multiplier=1.5
+# Evaluation timeframe (candle boundary for trigger check)
+microalpha.trigger.evaluation.timeframe=5m
+
+# --- Flow Conviction Weights ---
+# OFI contribution to flow score
+microalpha.flow.ofi.weight=0.40
+# Depth absorption contribution
+microalpha.flow.depth.weight=0.30
+# VPIN toxicity contribution
+microalpha.flow.vpin.weight=0.30
+
+# --- OI Conviction Weights ---
+# OI interpretation (LONG_BUILDUP etc.) weight
+microalpha.oi.interpretation.weight=0.50
+# OI velocity divergence weight
+microalpha.oi.velocity.weight=0.30
+# OI reversal signal weight
+microalpha.oi.reversal.weight=0.20
